--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  youtube_player_flutter: ^8.0.0
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   shared_preferences: ^2.2.2
@@ -40,7 +40,8 @@ dependencies:
   flutter_stripe: ^11.0.0
   flutter_paystack_plus: ^2.0.4
   just_audio: ^0.9.39
-
+  provider: ^6.1.2
+  audioplayers: ^6.1.0
 
 #==== Dev Dependencies start ====#
 dev_dependencies:
@@ -51,7 +52,7 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/icon/Quraan.png"
 
 
 flutter:
